--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <img class="header__logo" src="https://www.pngarts.com/files/3/Cute-Cat-PNG-Photo.png" width="154" height="64" alt="Логотип магазина «Глейси»">
           </a>
         <ul class="header__menu">
-          <li><a href="catalog.html">Каталог</a> 
+          <li><a href="catalog.html">Каталог</a>
           <ul class="inner__menu">
             <li>Новинки</li>
             <li class="divider"></li>
@@ -53,7 +53,67 @@
       </nav>
     </header>
     <main>
-      <!-- Этот блок отмечен красным цветом, его будем делать на следующих уроках -->
+        <div class="contacts">
+            <p class="contacts__worktime">С 10 до 20, ежедневно</p>
+            <p class="contacts__phone">8 812 450-25-25</p>
+        </div>
+        <h1>Крем-брюле и пломбир <br>
+          с малиновым джемом</h1>
+          <button>Давайте оба!</button>
+        <section class="gifts">
+          <article class="gifts__one">
+            <h2>Малинка даром!</h2>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно. </p>
+            <button>Хочу варенье!</button>
+          </article>
+          <article class="gifts__two">
+            <h2>Шоколадки даром!</h2>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.   </p>
+            <button>Хочу шоколадки!</button>
+          </article>
+        </section>
+            <ul class="catalog__choice">
+                <li>
+                  <div>
+                    <img src="https://avatanplus.com/files/resources/original/572863461129a15475c3c9b6.png" width="267" height="267" alt="Фото мороженого">
+                    <div>
+                      <span class="catalog--price">310</span>
+                      <span class="catalog--weight">₽/кг</span>
+                    </div>
+                  </div>
+                  <span class="catalog--name">Сливочное с апельсиновым джемом и цитрусовой стружкой</span>
+                </li>
+                <li>
+                  <div>
+                    <img src="https://avatanplus.com/files/resources/original/572863461129a15475c3c9b6.png" width="267" height="267" alt="Фото мороженого">
+                    <div>
+                      <span class="catalog--price">380</span>
+                      <span class="catalog--weight">₽/кг</span>
+                    </div>
+                  </div>
+                  <span class="catalog--name">Сливочно-кофейное с кусочками шоколада</span>
+                </li>
+                <li>
+                  <div>
+                    <img src="https://avatanplus.com/files/resources/original/572863461129a15475c3c9b6.png" width="267" height="267" alt="Фото мороженого">
+                    <div>
+                      <span class="catalog--price">355</span>
+                      <span class="catalog--weight">₽/кг</span>
+                    </div>
+                  </div>
+                  <span class="catalog--name">Сливочно-клубничное с присыпкой из белого шоколада</span>
+                </li>
+                <li>
+                  <div>
+                    <img src="https://avatanplus.com/files/resources/original/572863461129a15475c3c9b6.png" width="267" height="267" alt="Фото мороженого">
+                    <div>
+                      <span class="catalog--price">415</span>
+                      <span class="catalog--weight">₽/кг</span>
+                    </div>
+                  </div>
+                  <span class="catalog--name">Сливочное крем-брюле с карамельной подливкой</span>
+                </li>
+            </ul>
     </main>
     <section class="benefits">
       <p>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
@@ -87,7 +147,7 @@
       </div>
     </section>
     <section class="subscribes">
-      <p class="subscribes__content">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) 
+      <p class="subscribes__content">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
       </p>
       <span class="subscribes__form">
         <!-- Здесь будет форма для mail -->
@@ -95,7 +155,14 @@
       <span class="subscribes__button">Отправить</span>
     </section>
     <section>
-      <!-- Этот блок отмечен красным цветом, его будем делать на следующих уроках -->
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3AXWUbK2nw6gR2-xpv16dDyL_sRWGopB5q&amp;width=100%25&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
+    </section>
+    <section>
+      <p>Адрес главного офиса и офлайн-магазина: </p>
+      <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+      <p>Для заказов по телефону:</p>
+      <p>8 812 450-25-25 (с 10 до 20 ежедневно) </p>
+      <button>Форма обратной связи</button>
     </section>
     <div>
         <form> <!-- здесь будет форма обратной связи--> </form>
@@ -122,5 +189,5 @@
         </a>
         <span class="footer__developer">Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</span>
       </footer>
-    </body>
+      </body>
   </html>
